--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <td>TASK11</td>
             <td><a href="Task11.html">Link11 CSS</a></td>
         </tr>
+        <tr>
+            <td>TASK12</td>
+            <td><a href="Task12.html">Link12 CSS</a></td>
+        </tr>
     </table>
 </body>
 </html>
